<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movement"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_red_light"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutInRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_border"
            android:contentDescription="@string/button"
            android:src="@mipmap/ic_launcher_back" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_border"
            android:contentDescription="@string/button"
            android:src="@mipmap/ic_launcher_forward" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:background="@color/backgroundGray"
            android:contentDescription="@string/button"
            android:src="@mipmap/ic_launcher_car" />

        <ImageButton
            android:id="@+id/upward"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:background="@drawable/button_border"
            android:contentDescription="@string/button"
            android:src="@mipmap/ic_launcher_upward" />

        <ImageButton
            android:id="@+id/downward"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/button_border"
            android:contentDescription="@string/button"
            android:src="@mipmap/ic_launcher_downward" />
    </RelativeLayout>

    <TextView
        android:id="@+id/servo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relativeLayoutInRelativeLayout"
        android:gravity="center"
        android:text="@string/gripper"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"/>

    <SeekBar
        android:id="@+id/gripper"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:background="@drawable/button_border"
        android:max="59"/>
</RelativeLayout>